public static class Constant
{
    public static readonly string Animation_IDLE = "IDLE";
    public static readonly string Animation_RUN = "RUN";
    public static readonly string Animation_ATTACK = "ATTACK";
    public static readonly string Animation_STUN = "STUN";
    public static readonly string Animation_DEATH = "DEATH";
}
